Fix: Breaks lines in code elements if an overflow occurs

--- a/WebUI/src/assets/css/index.css
+++ b/WebUI/src/assets/css/index.css
@@ -80,4 +80,7 @@
   body {
     @apply bg-background text-foreground;
   }
+  code {
+    @apply break-words whitespace-pre-wrap;
+  }
 }
